<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up"
            android:textStyle="normal"
            android:textSize="50dp"
            android:textColor="@color/colorBlack"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:textColorHint="@color/colorHint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:textColorHint="@color/colorHint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:textColorHint="@color/colorHint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/colorHint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/colorHint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:background="@color/colorSignIn"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/facebook"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_facebook"
                android:text="@string/facebook"
                android:textColor="@color/colorWhite"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/colorBlack"
                />

            <Button
                android:id="@+id/office"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_office"
                android:text="@string/office"
                android:textColor="@color/colorOffice"
                />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>